--- a/demo/index.html
+++ b/demo/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<style is="custom-style">
+<style is="custom-style" include="skin-styles-classes">
   .redlines {
     background: linear-gradient(0deg, transparent, transparent 3.5px, rgba(255, 0, 0, 0.2) 3.5px, rgba(255, 0, 0, 0.2) 4px);
     background-size: 100% 4px;
