--- a/classes.html
+++ b/classes.html
@@ -15,6 +15,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <dom-module id="skin-styles-classes">
   <template>
     <custom-style>
+      <style is="custom-style" include="skin-styles-classes-buttons skin-styles-classes-typography"></style>
     </custom-style>
   </template>
 </dom-module>
