syle classes to modules -- v4

--- a/classes/typography.html
+++ b/classes/typography.html
@@ -1,13 +1,10 @@
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../paper-styles/classes/typography.html">
 <link rel="import" href="../../paper-styles/typography.html">
-<link rel="import" href="typography-dark.html">
-<link rel="import" href="typography-light.html">
 
 <!--
 `skin-styles-classes-typography`
 Typography Sizes applied to paper classes.
-
 
 @demo demo/index.html
 -->
@@ -15,6 +12,156 @@ Typography Sizes applied to paper classes.
   <template>
     <custom-style>
       <style is="custom-style">
+        /*
+        "Line wrapping only applies to Body, Subhead, Headline, and the smaller Display
+        styles. All other styles should exist as single lines."
+        */
+
+        /*noinspection ALL*/
+        .light.paper-font-display4 {
+          color: var(--light-theme-font-display4);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-display3 {
+          color: var(--light-theme-font-display3);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-display2 {
+          color: var(--light-theme-font-display2);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-display1 {
+          color: var(--light-theme-font-display1);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-headline {
+          color: var(--light-theme-font-headline);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-title {
+          color: var(--light-theme-font-title);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-subhead {
+          color: var(--light-theme-font-subhead);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-body2 {
+          color: var(--light-theme-font-body2);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-body1 {
+          color: var(--light-theme-font-body1);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-caption {
+          color: var(--light-theme-font-caption);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-menu {
+          color: var(--light-theme-font-menu);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-button {
+          color: var(--light-theme-font-button);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-code2 {
+          color: var(--light-theme-font-code2);
+        }
+
+        /*noinspection ALL*/
+        .light.paper-font-code1 {
+          color: var(--light-theme-font-code1);
+        }
+
+        /*
+  "Line wrapping only applies to Body, Subhead, Headline, and the smaller Display
+  styles. All other styles should exist as single lines."
+  */
+
+        /*noinspection ALL*/
+        .dark.paper-font-display4 {
+          color: var(--dark-theme-font-display4);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-display3 {
+          color: var(--dark-theme-font-display3);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-display2 {
+          color: var(--dark-theme-font-display2);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-display1 {
+          color: var(--dark-theme-font-display1);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-headline {
+          color: var(--dark-theme-font-headline);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-title {
+          color: var(--dark-theme-font-title);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-subhead {
+          color: var(--dark-theme-font-subhead);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-body2 {
+          color: var(--dark-theme-font-body2);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-body1 {
+          color: var(--dark-theme-font-body1);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-caption {
+          color: var(--dark-theme-font-caption);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-menu {
+          color: var(--dark-theme-font-menu);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-button {
+          color: var(--dark-theme-font-button);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-code2 {
+          color: var(--dark-theme-font-code2);
+        }
+
+        /*noinspection ALL*/
+        .dark.paper-font-code1 {
+          color: var(--dark-theme-font-code1);
+        }
+
         /*
         "Line wrapping only applies to Body, Subhead, Headline, and the smaller Display
         styles. All other styles should exist as single lines."
