syle classes to modules -- v5

--- a/styles/default-theme.html
+++ b/styles/default-theme.html
@@ -86,15 +86,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --light-theme-font-display2: var(--paper-blue-grey-800);
     --light-theme-font-display1: var(--paper-blue-grey-700);
     --light-theme-font-headline: var(--paper-blue-grey-700);
-    --light-theme-font-title: var(--paper-blue-grey-700);
-    --light-theme-font-subhead: var(--paper-blue-grey-700);
-    --light-theme-font-body2: var(--paper-blue-grey-400);
-    --light-theme-font-body1: var(--paper-blue-grey-400);
-    --light-theme-font-caption: var(--paper-blue-grey-800);
-    --light-theme-font-menu: var(--paper-blue-grey-800);
-    --light-theme-font-button: var(--paper-blue-grey-800);
-    --light-theme-font-code2: var(--paper-blue-grey-800);
-    --light-theme-font-code1: var(--paper-blue-grey-800);
+    --light-theme-font-title: var(--paper-grey-900);
+    --light-theme-font-subhead: var(--paper-grey-900);
+    --light-theme-font-body2: var(--paper-grey-800);
+    --light-theme-font-body1: var(--paper-grey-800);
+    --light-theme-font-caption: var(--paper-grey-700);
+    --light-theme-font-menu: var(--paper-grey-700);
+    --light-theme-font-button: var(--paper-grey-800);
+    --light-theme-font-code2: var(--paper-grey-700);
+    --light-theme-font-code1: var(--paper-grey-700);
 
     /*
      * Dark Theme Font Colors
