--- a/demo/index.html
+++ b/demo/index.html
@@ -21,12 +21,12 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
   <link rel="import" href="../../paper-styles/demo-pages.html">
-  <link rel="import" href="../skin-styles.html">
   <link rel="import" href="../../paper-button/paper-button.html">
+  <link rel="import" href="../skin-styles.html">
 
 </head>
 
-<style is="custom-style" include="skin-styles-classes">
+<style is="custom-style" include="skin-styles">
   .redlines {
     background: linear-gradient(0deg, transparent, transparent 3.5px, rgba(255, 0, 0, 0.2) 3.5px, rgba(255, 0, 0, 0.2) 4px);
     background-size: 100% 4px;
