--- a/classes/typography.html
+++ b/classes/typography.html
@@ -373,58 +373,75 @@ Typography Sizes applied to paper classes.
           /* media-breakpoint-up-md */
           /*noinspection ALL*/
           .paper-font-display4 {
+
           }
 
           /*noinspection ALL*/
           .paper-font-display3 {
-            font-size: 60px;
-            font-weight: 500;
+            font-size: 70px;
+            font-weight: 400;
+            letter-spacing: -.028em;
+            line-height: 85px;
           }
 
           /*noinspection ALL*/
           .paper-font-display2 {
-            @apply(--paper-font-display3);
+            font-size: 56px;
+            font-weight: 400;
+            letter-spacing: -.026em;
+            line-height: 60px;
           }
 
           /*noinspection ALL*/
           .paper-font-display1 {
-            @apply(--paper-font-display2);
+            font-size: 45px;
+            font-weight: 400;
+            letter-spacing: -.018em;
+            line-height: 48px;
           }
 
           /*noinspection ALL*/
           .paper-font-headline {
-            @apply(--paper-font-display1);
+            font-size: 34px;
+            font-weight: 400;
+            letter-spacing: -.01em;
+            line-height: 40px;
           }
 
           /*noinspection ALL*/
           .paper-font-title {
-            @apply(--paper-font-headline);
+            font-size: 24px;
             font-weight: 500;
+            letter-spacing: -.012em;
+            line-height: 32px;
           }
 
           /*noinspection ALL*/
           .paper-font-subhead {
-            @apply(--paper-font-title);
+            font-size: 20px;
             font-weight: 400;
-          }
-
-          /*noinspection ALL*/
-          .paper-font-body1 {
-            @apply(--paper-font-subhead);
+            line-height: 28px;
           }
 
           /*noinspection ALL*/
           .paper-font-body2 {
-            @apply(--paper-font-subhead);
+            font-size: 16px;
             font-weight: 500;
+            line-height: 30px;
           }
 
           /*noinspection ALL*/
           .paper-font-body1 {
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 24px;
           }
 
           /*noinspection ALL*/
           .paper-font-caption {
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 20px;
           }
 
           /*noinspection ALL*/
