button link reset

--- a/classes/buttons.html
+++ b/classes/buttons.html
@@ -12,6 +12,12 @@ App color themes
     <custom-style>
       <style is="custom-style">
         /*noinspection ALL*/
+        a > paper-button {
+          text-decoration: none;
+          color: inherit;
+        }
+
+        /*noinspection ALL*/
         paper-button {
           text-decoration: none;
         }
