Base update, add grid and separate demos

--- a/classes/buttons.html
+++ b/classes/buttons.html
@@ -5,7 +5,8 @@
 `buttons`
 App color themes
 
-@demo demo/index.html
+@group Skin Styles
+@demo demo/buttons.html
 -->
 <dom-module id="skin-styles-buttons">
   <template strip-whitespace>
