--- a/classes.html
+++ b/classes.html
@@ -1,13 +1,13 @@
 <!--
 @license
 -->
-
-<link rel="import" href="../polymer/polymer.html">
+<link rel="import" href="../polymer/polymer-element.html">
 <link rel="import" href="classes/buttons.html">
 <link rel="import" href="classes/typography.html">
+<link rel="import" href="classes/grid.html">
 
 <dom-module id="skin-styles">
   <template>
-    <style include="skin-styles-buttons skin-styles-typography"></style>
+    <style include="skin-styles-buttons skin-styles-typography skin-styles-grid"></style>
   </template>
 </dom-module>
