--- a/skin-styles.html
+++ b/skin-styles.html
@@ -2,15 +2,19 @@
 The `<skin-styles>` component provides simple ways to use Material Design CSS styles
 in your application. The following imports are available:
 
-1. [color.html](https://github.com/PolymerElements/skin-styles/blob/master/color.html):
-a complete list of the colors defined in the Material Design [palette](https://www.google.com/design/spec/style/color.html)
+The following demos are available:
+1. [buttons.html](https://github.com/FabricElements/skin-styles/blob/master/demo/buttons.html):
+A complete set of custom buttons.
+2. [grid.html](https://github.com/FabricElements/skin-styles/blob/master/demo/grid.html):
+A grid layout using Bootstrap.
+3. [typography.html](https://github.com/FabricElements/skin-styles/blob/master/demo/typography.html):
+A Set of default styles for typography extending the paper default styles.
 
 We recommend importing each of these individual files, and using the style mixins
 available in each ones, rather than the aggregated `skin-styles.html` as a whole.
 
-@group Paper Elements
+@group Skin Styles
 @pseudoElement skin-styles
-@demo demo/index.html
 -->
 <link rel="import" href="styles.html">
 <link rel="import" href="classes.html">
