add bootstrap basics

--- a/classes.html
+++ b/classes.html
@@ -5,9 +5,10 @@
 <link rel="import" href="classes/buttons.html">
 <link rel="import" href="classes/typography.html">
 <link rel="import" href="classes/grid.html">
+<link rel="import" href="classes/bootstrap.html">
 
 <dom-module id="skin-styles">
   <template>
-    <style include="skin-styles-buttons skin-styles-typography skin-styles-grid"></style>
+    <style include="skin-styles-buttons skin-styles-typography skin-styles-grid skin-styles-bootstrap"></style>
   </template>
 </dom-module>
