--- a/classes/grid.html
+++ b/classes/grid.html
@@ -17,6 +17,10 @@ https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap-grid.css
 <dom-module id="skin-styles-grid">
   <template strip-whitespace>
     <style>
+      [hidden] {
+        display: none;
+      }
+
       .container,
       .container-fluid,
       .row,
@@ -24,7 +28,6 @@ https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap-grid.css
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
       }
-
 
       /**
       Default Bootstrap grid
