--- a/classes/bootstrap.html
+++ b/classes/bootstrap.html
@@ -3666,9 +3666,9 @@ https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap.css
       .invisible {
         visibility: hidden !important;
       }
-      
+
       [hidden] {
-        display: none;
+        display: none !important;
       }
 
       .hidden-xs-up {
