--- a/classes/grid.html
+++ b/classes/grid.html
@@ -18,7 +18,7 @@ https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap-grid.css
   <template strip-whitespace>
     <style>
       [hidden] {
-        display: none;
+        display: none !important;
       }
 
       .container,
