--- a/classes/grid.html
+++ b/classes/grid.html
@@ -27,6 +27,7 @@ https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap-grid.css
       [class*="col-"] {
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
+        max-width: 100%;
       }
 
       /**
