--- a/classes/grid.html
+++ b/classes/grid.html
@@ -21,13 +21,16 @@ https://github.com/twbs/bootstrap/blob/v4-dev/dist/css/bootstrap-grid.css
         display: none !important;
       }
 
+      .container-fluid {
+        max-width: 100%;
+      }
+
       .container,
       .container-fluid,
       .row,
       [class*="col-"] {
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
-        max-width: 100%;
       }
 
       /**
