--- a/classes/typography.html
+++ b/classes/typography.html
@@ -1,163 +1,140 @@
-<link rel="import" href="../../polymer/polymer-element.html">
+<link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../paper-styles/classes/typography.html">
 <link rel="import" href="../../paper-styles/typography.html">
 
 <!--
-`skin-styles-classes-typography`
+@license
+Copyright (c) 2017 FabricElements. All rights reserved.
+
+`skin-styles-typography`
 Typography Sizes applied to paper classes.
 
 @group Skin Styles
+@pseudoElement skin-styles-typography
 @demo demo/typography.html
 -->
+
 <dom-module id="skin-styles-typography">
-  <template strip-whitespace>
-    <style>
+  <template>
+    <style is="custom-style">
       /*
       "Line wrapping only applies to Body, Subhead, Headline, and the smaller Display
       styles. All other styles should exist as single lines."
       */
 
-      /*noinspection ALL*/
       .light.paper-font-display4 {
         color: var(--light-theme-font-display4, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-display3 {
         color: var(--light-theme-font-display3, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-display2 {
         color: var(--light-theme-font-display2, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-display1 {
         color: var(--light-theme-font-display1, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-headline {
         color: var(--light-theme-font-headline, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-title {
         color: var(--light-theme-font-title, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-subhead {
         color: var(--light-theme-font-subhead, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-body2 {
         color: var(--light-theme-font-body2, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-body1 {
         color: var(--light-theme-font-body1, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-caption {
         color: var(--light-theme-font-caption, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-menu {
         color: var(--light-theme-font-menu, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-button {
         color: var(--light-theme-font-button, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-code2 {
         color: var(--light-theme-font-code2, #000000);
       }
 
-      /*noinspection ALL*/
       .light.paper-font-code1 {
         color: var(--light-theme-font-code1, #000000);
       }
 
       /*
-"Line wrapping only applies to Body, Subhead, Headline, and the smaller Display
-styles. All other styles should exist as single lines."
-*/
+      "Line wrapping only applies to Body, Subhead, Headline, and the smaller Display
+      styles. All other styles should exist as single lines."
+      */
 
-      /*noinspection ALL*/
       .dark.paper-font-display4 {
         color: var(--dark-theme-font-display4, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-display3 {
         color: var(--dark-theme-font-display3, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-display2 {
         color: var(--dark-theme-font-display2, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-display1 {
         color: var(--dark-theme-font-display1, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-headline {
         color: var(--dark-theme-font-headline, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-title {
         color: var(--dark-theme-font-title, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-subhead {
         color: var(--dark-theme-font-subhead, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-body2 {
         color: var(--dark-theme-font-body2, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-body1 {
         color: var(--dark-theme-font-body1, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-caption {
         color: var(--dark-theme-font-caption, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-menu {
         color: var(--dark-theme-font-menu, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-button {
         color: var(--dark-theme-font-button, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-code2 {
         color: var(--dark-theme-font-code2, #FFFFFF);
       }
 
-      /*noinspection ALL*/
       .dark.paper-font-code1 {
         color: var(--dark-theme-font-code1, #FFFFFF);
       }
