--- a/skin-styles.html
+++ b/skin-styles.html
@@ -1,4 +1,7 @@
 <!--
+@license
+Copyright (c) 2017 FabricElements. All rights reserved.
+
 The `<skin-styles>` component provides simple ways to use Material Design CSS styles
 in your application. The following imports are available:
 
