--- a/styles.html
+++ b/styles.html
@@ -1,4 +1,9 @@
-<!-- skin-styles Styles -->
+<!--
+@license
+Copyright (c) 2017 FabricElements. All rights reserved.
+
+skin-styles Styles
+-->
 <link rel="import" href="../paper-styles/paper-styles.html">
 <link rel="import" href="styles/default-theme.html">
 <link rel="import" href="styles/buttons.html">
