--- a/classes.html
+++ b/classes.html
@@ -1,7 +1,9 @@
 <!--
 @license
+Copyright (c) 2017 FabricElements. All rights reserved.
+
+skin-styles Styles
 -->
-<link rel="import" href="../polymer/polymer-element.html">
 <link rel="import" href="classes/buttons.html">
 <link rel="import" href="classes/typography.html">
 <link rel="import" href="classes/grid.html">
@@ -9,6 +11,6 @@
 
 <dom-module id="skin-styles">
   <template>
-    <style include="skin-styles-buttons skin-styles-typography skin-styles-grid skin-styles-bootstrap"></style>
+    <style include="skin-styles-typography skin-styles-buttons"></style>
   </template>
 </dom-module>
