--- a/demo/buttons.html
+++ b/demo/buttons.html
@@ -1,13 +1,8 @@
 <!doctype html>
 
 <!--
-  @license
-  Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-  This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-  The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-  The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-  Code distributed by Google as part of the polymer project is also
-  subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
+@license
+Copyright (c) 2017 FabricElements. All rights reserved.
 -->
 
 <html>
@@ -28,6 +23,12 @@
 
   <custom-style>
     <style include="skin-styles-buttons">
+      body {
+        margin: 0;
+        padding: 1rem;
+        font-family: sans-serif, Helvetica, Verdana;
+      }
+
       section {
         border-bottom: 4px solid gray;
         padding: 30px 10px;
