--- a/demo/typography.html
+++ b/demo/typography.html
@@ -1,13 +1,8 @@
 <!doctype html>
 
 <!--
-  @license
-  Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-  This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-  The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-  The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-  Code distributed by Google as part of the polymer project is also
-  subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
+@license
+Copyright (c) 2017 FabricElements. All rights reserved.
 -->
 
 <html>
@@ -21,13 +16,18 @@
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../polymer/lib/elements/custom-style.html">
 
-  <link rel="import" href="../../paper-styles/demo-pages.html">
   <link rel="import" href="../../paper-button/paper-button.html">
   <link rel="import" href="../classes/typography.html">
   <link rel="import" href="../styles/default-theme.html">
 
   <custom-style>
     <style include="skin-styles-typography">
+      body {
+        margin: 0;
+        padding: 1rem;
+        font-family: sans-serif, Helvetica, Verdana;
+      }
+
       .redlines {
         background: linear-gradient(0deg, transparent, transparent 3.5px, rgba(255, 0, 0, 0.2) 3.5px, rgba(255, 0, 0, 0.2) 4px);
         background-size: 100% 4px;
@@ -103,7 +103,6 @@
     </style>
   </custom-style>
 </head>
-
 <body>
 <h1>skin-styles-typography</h1>
 
@@ -250,6 +249,5 @@
     </p>
   </article>
 </section>
-
 </body>
 </html>
